tdf#90955: CharKerning i.e spc is not exported after RT.

Problem Description:
- CharKerning i.e spacing between characters/letter is not exported
after roundtrip.

XML Difference:
Original:
<a:rPr lang="en-IN" sz="6000" b="1" kern="0" spc="2000" baseline="0">

After Roundtrip:
<a:rPr b="1" lang="en-IN" sz="6000" strike="noStrike">

spc is missing after RT.

Change-Id: I8bcefd6f0d0e3a1825618bece6f563792633a272
Solution: added support for spc.